--- a/menu.html
+++ b/menu.html
@@ -61,14 +61,14 @@
       <img src="images/teaninja_drink_creme_brulee.jpg" alt="creme brulee" class="special" id="creme_brulee">
       <img src="images/brown_sugar_latte.jpg" alt="brown sugar latte" class="milk-series" id="brown_sugar_latte">
       <img src="images/red_ninja_milk.jpg" alt="red ninja milk" class="milk-series" id="red_ninja_milk">
-      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="milk-series" id="teaninja_logo_circle_milk">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" id="teaninja_logo_circle_milk">
       <img src="images/yellow_ninja_milk.jpg" alt="yellow ninja milk" class="milk-series" id="yellow_ninja_milk">
 
 
       <img src="images/grapefruit_slush.jpg" alt="grapefruit slush" class="special" id="grapefruit_slush">
       <img src="images/cappuccino_slush.jpg" alt="cappuccino slush" class="slush-series" id="cappuccino_slush">
       <img src="images/chocolate_banana_slush.jpg" alt="chocolate banana slush" class="slush-series" id="chocolate_banana_slush">
-      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="slush-series" id="teaninja_logo_circle_slush">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" id="teaninja_logo_circle_slush">
       <div class="color-block-slush"></div>
       <img src="images/pinacolada_slush.jpg" alt="pinacolada slush" class="special" id="pinacolada_slush">
       <img src="images/mango_slush.jpg" alt="mango slush" class="slush-series" id="mango_slush">
@@ -83,7 +83,7 @@
       <div class="color-block-fruit"></div>
       <img src="images/peach_ice_jelly.jpg" alt="peach ice jelly" class="special" id="peach_ice_jelly">
       <img src="images/passion_fruit_qq.jpg" alt="passion fruit qq" class="fruit-series" id="passion_fruit_qq">
-      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="fruit-series" id="teaninja_logo_circle_fruit">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" id="teaninja_logo_circle_fruit">
       <img src="images/lychee_qq.jpg" alt="lychee qq" class="fruit-series" id="lychee_qq">
       <img src="images/rose_strawberry_tea.jpg" alt="rose strawberry tea" class="fruit-series" id="rose_strawberry_tea">
 
@@ -92,7 +92,7 @@
       <img src="images/chocolate_oreo_milk_tea.jpg" alt="chocolate oreo milk tea" class="milktea-series" id="chocolate_oreo_milk_tea">
       <img src="images/oolong_milk_tea.jpg" alt="oolong milk tea" class="milktea-series" id="oolong_milk_tea">
       <img src="images/pudding_milk_tea.jpg" alt="pudding milk tea" class="milktea-series" id="pudding_milk_tea">
-      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="milktea-series" id="teaninja_logo_circle_milktea">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" id="teaninja_logo_circle_milktea">
       <img src="images/red_bean_matcha.jpg" alt="red bean matcha" class="special" id="red_bean_matcha">
       <img src="images/caramel_macchiato.jpg" alt="caramel macchiato" class="milktea-series" id="caramel_macchiato">
       <img src="images/taro_milk_tea.jpg" alt="taro milk tea" class="milktea-series" id="taro_milk_tea">
@@ -100,7 +100,7 @@
       <div class="color-block-milktea"></div>
 
       <img src="images/roasted_oolong_float.jpg" alt="roasted oolong float" class="special" id="roasted_oolong_float">
-      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" class="float-series" id="teaninja_logo_circle_float">
+      <img src="images/teaninja_logo_circle.jpg" alt="teaninja circle logo" id="teaninja_logo_circle_float">
       <img src="images/earl_grey_float.jpg" alt="earl_grey_float" class="float-series" id="earl_grey_float">
       <img src="images/jasmine_float.jpg" alt="jasmine float" class="float-series" id="jasmine_float">
       <div class="color-block-float"></div>
